# arch-configs

./: README.md  install.sh
config/: .nanorc  .xinitrc
config/gtk-3.0/: settings.ini
config/i3/: config
config/i3/scripts/: kill.sh
config/picom/: picom.conf
config/polybar/: config
config/polybar/scripts/: bandwidth.sh  cpu-temp.sh  cpu-usage.sh  date.sh  i3-workspace.sh  launch.sh  media.sh  power-only-logout.sh  power.sh  time.sh  updates.sh  volume.sh
extra/: 10-monitor.conf  50-mouse-acceleration.conf  50-mouse-sens.conf  fiio_q3.rules  mousesens.rules  mousesens.sh  plexamp.sh  spotify.sh
rust/ipc/: Cargo.toml
rust/ipc/src/: main.rs  main.rs.backup  main.rs.backup2  reader.rs  writer.rs
rust/ipc/src/client/: main.rs
rust/schedule/: Cargo.toml
rust/schedule/src/: main.rs  main.rs.backup
rust/text-animator/: Cargo.toml  test.json
rust/text-animator/src/: main.rs
setup/: audio.sh  build.sh  fonts.sh  i3.sh  keyboard.sh  monitors.sh  mouse.sh  nano.sh  paru.sh  picom.sh  plexamp.sh  polkit.sh  polybar.sh  rust.sh  spotify.sh  theme.sh  tools.sh  wallpaper.sh  xorg.sh  xrdp.sh
