[package]
name = "ipc"
version = "0.1.0"
authors = ["user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
async-compat = "0.2.1"
async-ctrlc = "1.2.0"
futures = "0.3.15"
structopt = "0.3.21"
tokio = { version = "1.6.1", features = ["net"] }