[package]
name = "ipc"
version = "0.1.0"
authors = ["user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.31"
structopt = "0.3.26"
tokio = { version = "1.49.0", features = ["io-std", "io-util", "macros", "net", "rt", "sync", "time"] }
tokio-util = "0.7.18"
